out/production/My Development Org/objects/bvd_connector__Orbis_Field__c.object
<CustomObject>
    <fields>
        <fullName>bvd_connector__Data_Dimension__c</fullName>
        <description>Dimension name if iterable</description>
        <inlineHelpText>Dimension name if iterable</inlineHelpText>
        <label>Data Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Data_Example__c</fullName>
        <label>Data Example</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Regular_Name__c</fullName>
        <label>Regular Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__SObject__c</fullName>
        <label>SObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>MoneyValue</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>Latitude</fullName>
                </value>
                <value>
                    <fullName>Longitude</fullName>
                </value>
                <value>
                    <fullName>Url</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Orbis Field</label>
    <nameField>
        <label>Orbis Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orbis Fields</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>